--- a/ruby/demoblog/app/views/comments/_form.html.erb
+++ b/ruby/demoblog/app/views/comments/_form.html.erb
@@ -9,6 +9,6 @@
         <%= f.input :comment, input_html: {class: 'textarea'}, wrapper: false, label_html: { class: 'label' } %>
       </div>
     </div>
-    <%= f.button :submit, class: "button is-primary" %>
+    <%= f.button :submit, class: "button is-info" %>
 
 <% end %>
