--- a/ruby/demoblog/app/views/posts/new.html.erb
+++ b/ruby/demoblog/app/views/posts/new.html.erb
@@ -13,6 +13,6 @@
 				<%= f.input :content, input_html: {class: 'textarea'}, wrapper: false, label_html: { class: 'label' } %>
 			</div>
 		</div>
-		<%= f.button :submit, 'Create New post', class: "button is-primary" %>
+		<%= f.button :submit, 'Create New post', class: "button is-info" %>
 	<% end %>
 </div>
